# watchtower

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  UPGRADE_PLAN.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture-audit-current-state.md  architecture-flow.md  why-watchtower-and-miniog.md
scripts/: run-tauri.mjs
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/schemas/: agent-performance-result.schema.json  agent-planner-result.schema.json  agent-reviewer-result.schema.json  agent-security-result.schema.json  agent-verifier-result.schema.json  bug-fix-result.schema.json  owner-autopilot-result.schema.json  pm-task-result.schema.json  pr-review-result.schema.json  unknown-task-result.schema.json
sidecar/src/: config.ts  index.ts  platform.ts
sidecar/tests/: accessControl.test.ts  activeJobs.test.ts  agentPipeline.test.ts  assertThreadParentExists.test.ts  bans.test.ts  bugFixWorkflow.test.ts  bundlesStore.test.ts  clarificationGuards.test.ts  classifyIntent.test.ts  claudeCodeBackend.test.ts  config.test.ts  conversationalWorkflow.test.ts  deployWorkflow.test.ts  devAssistParser.test.ts  devAssistWorkflow.test.ts  diffHunks.test.ts  dossierBuilder.test.ts  dossierFormatHuman.test.ts  dossierStore.test.ts  (+55 more)
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+114 files in other folders)
