[package]
name = "watchtower"
version = "0.2.1"
description = "Watchtower (macOS-only Slack mention automation)"
authors = ["Dipesh"]
edition = "2021"
default-run = "watchtower"

[lib]
name = "watchtower_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "sync"] }
uuid = { version = "1", features = ["v4"] }
